--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/f25fa26ecbd65821dfe06c7459238464bd18fb4274a34aedf3d47f702074c2ab?placeholderIfAbsent=true&apiKey=b92d8daa87de47a5be16026c8c9cdcda" alt="Navigation Icon" class="object-contain shrink-0 self-stretch my-auto max-w-full rounded-none aspect-[3.94] w-[130px]" />
         <div class="flex gap-10 self-stretch font-medium whitespace-nowrap">
           <a href="#login" class="my-auto leading-9 text-neutral-600">Login</a>
-          <a href="#signup" class="px-9 py-5 leading-none text-white rounded-xl shadow-[0px_5px_0px_rgba(0,0,0,0.161)] max-md:px-5">Signup</a>
+          <a href="#signup" class="px-9 py-5 leading-none text-white rounded-xl shadow-[0px_5px_0px_rgba(0,0,0,0.161)] max-md:px-5 bg-gradient-to-l bg bg-purple-700 bg-gradient-to-r bg-purple-300">Signup</a>
         </div>
       </nav>
     </header>
